Fix issues raised by Copilot